update api/documentation
